Atualização Bilíngue/ Bilingual Update
-Adicionando páginas em Inglês / Adding pages in English

--- a/contact-me.html
+++ b/contact-me.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Meus Contatos</title>
+  <title>My contacts</title>
 </head>
   <body>
-    <a href="index.html">Página Inicial</a>
-    <h1>Meus Contatos:</h1>
+    <a href="indexEn.html">Index</a>
+    <h1>My contacts:</h1>
     <ul>
-      <li><strong>Email:</strong>gabriel.augusto3m2@gmail.com</li>
-      <li><strong>Linkedin:</strong><a href="https://www.linkedin.com/in/gabriel-augusto-5a2a72185/">Gabriel Augusto</a></li>
-      <li><strong>Meu número:</strong> +55 31 99636-4139</li>
+      <li><strong>Email: </strong>gabriel.augusto3m2@gmail.com</li>
+      <li><strong>Linkedin: </strong><a href="https://www.linkedin.com/in/gabriel-augusto-5a2a72185/">Gabriel Augusto</a></li>
+      <li><strong>My Number:</strong> +55 31 99636-4139</li>
     </ul>
     <hr>
     <form  action="mailto:gabriel.augusto3m2@gmail.com" method="post" enctype="text/plain">
-      <label>Seu Nome:</label>
+      <label>Your Name:</label>
       <input type="text" name="seuNome" value=""><br>
-      <label>Seu Email:</label>
+      <label>Your Email:</label>
       <input type="email" name="seuEmail" value=""><br>
-      <label>Sua Mensagem:</label><br>
+      <label>Your Message:</label><br>
       <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
       <input type="submit" name="">
 
