--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Site Desenvolvido Pelo estudante Gabriel Augusto com intuito educacional">
-  <title>Gabriel Personal Site</title>
+  <title>Site Pessoal do Gabriel</title>
 </head>
 
 <body>
@@ -13,10 +13,23 @@
       <td><img src="Imagens/Gabriel.png" alt="Imagem de perfil de Gabriel" height="150 150"></td>
       <td>
         <h1>Gabriel Augusto de Lima Maia</h1>
-        <p><em>Estudante inutil do curso de programação do <strong>CEFET-MG</strong></em></p>
-        <p>Sou um estudante do curso de engenharia de programação do Cefet-MG.<br> Participo como capitão na equipe <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, uma equipe voltada para a contrução de nano satélites.</p>
+        <p><em>Estudante inutil do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
+        <p>Sou um estudante do curso de engenharia de programação do Cefet-MG.<br> Participo como capitão na equipe <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, uma equipe voltada para a construção de nano satélites.</p>
       </td>
     </tr>
+  </table>
+  <hr>
+  <table cellspacing="20" align="center">
+    <tr>
+      <td><a href="index.html">Página Inicial</a></td>
+      <td><a href="hobbiesPt-Br.html">Meus Hobbies</a></td>
+      <td><a href="contate-me.html">Contate-me</a></td>
+    </tr>
+  </table>
+  <table cellspacing="10" cellpadding="1" align="center">
+    <td>Language</td>
+    <td><a href="index.html">PT-BR</a></td>
+    <td><a href="indexEn.html">EN-US</a></td>
   </table>
   <hr>
   <h3>Educação/Cursos</h3>
@@ -77,8 +90,6 @@
 
 
   <hr>
-  <a href="hobbies.html">Meus Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
 
 
 </body>
