Atualização Bilíngue/ Bilingual Update V1.1
-Consertando má escrita / Fixing bad writing

--- a/indexEn.html
+++ b/indexEn.html
@@ -83,7 +83,7 @@
       <td>⭐⭐</td>
     </tr>
     <tr>
-      <td>Reeding</td>
+      <td>Reading</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
