--- a/hobbiesEn.html
+++ b/hobbiesEn.html
@@ -12,7 +12,7 @@
   </p>
   <h3>Hobbies</h3>
   <ol>
-    <li>Reed <a href="https://saikaiscan.com.br/"> oriental light novels</a>;</li>
+    <li>To Read <a href="https://saikaiscan.com.br/"> oriental light novels</a>;</li>
     <li>Play electronic games;</li>
   </ol>
 </body>
