--- a/indexEn.html
+++ b/indexEn.html
@@ -76,7 +76,11 @@
     </tr>
     <tr>
       <td>C</td>
-      <td>⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Java</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>CSS </td>
