--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><img src="Imagens/Gabriel.png" alt="Imagem de perfil de Gabriel" height="150 150"></td>
       <td>
         <h1>Gabriel Augusto de Lima Maia</h1>
-        <p><em>Estudante inutil do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
+        <p><em>Estudante do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
         <p>Sou um estudante do curso de engenharia de programação do Cefet-MG.<br> Participo como capitão na equipe <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, uma equipe voltada para a construção de nano satélites.</p>
       </td>
     </tr>
