--- a/indexEn.html
+++ b/indexEn.html
@@ -13,7 +13,7 @@
       <td><img src="Imagens/Gabriel.png" alt="Profile image of Gabriel" height="150 150"></td>
       <td>
         <h1>Gabriel Augusto de Lima Maia</h1>
-        <p><em>Useless student of the computer engineering course at <strong>CEFET-MG</strong></em></p>
+        <p><em>Student of the computer engineering course at <strong>CEFET-MG</strong></em></p>
         <p>I am a student of the computer engineering course at Cefet-MG.<br>I participate as captain in the team <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, a team focused on the construction of nano satellites.</p>
       </td>
     </tr>
