Refatora a estrutura do projeto e atualiza o conteúdo
Reestrutura o projeto removendo arquivos HTML desatualizados e reorganizando os ativos.

Atualiza os arquivos de índice (versões em inglês e português) com novo conteúdo, incluindo um link para o portfólio, informações de perfil atualizadas e tabelas de habilidades aprimoradas.

--- a/Public/contact-me.html
+++ b/Public/contact-me.html
@@ -6,7 +6,7 @@
   <title>My contacts</title>
 </head>
   <body>
-    <a href="indexEn.html">Index</a>
+    <a href="../indexEn.html">Index</a>
     <h1>My contacts:</h1>
     <ul>
       <li><strong>Email: </strong>gabriel.augusto3m2@gmail.com</li>
@@ -15,14 +15,12 @@
     </ul>
     <hr>
     <form  action="mailto:gabriel.augusto3m2@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name:</label>
-      <input type="text" name="seuNome" value=""><br>
-      <label>Your Email:</label>
-      <input type="email" name="seuEmail" value=""><br>
-      <label>Your Message:</label><br>
-      <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
-      <input type="submit" name="">
-
+      <label>Your Name: <input type="text" name="seuNome" value=""><br></label>
+      <label>Your Email: <input type="email" name="seuEmail" value=""><br></label>
+      <label>Your Message:<br>
+        <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
+        <input type="submit" name="">
+      </label>
     </form>
   </body>
 </html>
