--- a/Public/contate-me.html
+++ b/Public/contate-me.html
@@ -6,7 +6,7 @@
   <title>Meus Contatos</title>
 </head>
   <body>
-    <a href="index.html">Página Inicial</a>
+    <a href="../index.html">Página Inicial</a>
     <h1>Meus Contatos:</h1>
     <ul>
       <li><strong>Email:</strong>gabriel.augusto3m2@gmail.com</li>
@@ -15,14 +15,12 @@
     </ul>
     <hr>
     <form  action="mailto:gabriel.augusto3m2@gmail.com" method="post" enctype="text/plain">
-      <label>Seu Nome:</label>
-      <input type="text" name="seuNome" value=""><br>
-      <label>Seu Email:</label>
-      <input type="email" name="seuEmail" value=""><br>
-      <label>Sua Mensagem:</label><br>
-      <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
-      <input type="submit" name="">
-
+      <label>Seu Nome: <input type="text" name="seuNome" value=""><br></label>
+      <label>Seu Email: <input type="email" name="seuEmail" value=""><br></label>
+      <label>Sua Mensagem:<br>
+        <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
+        <input type="submit" name="">
+      </label>
     </form>
   </body>
 </html>
