--- a/index.html
+++ b/index.html
@@ -1,101 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="Site Desenvolvido Pelo estudante Gabriel Augusto com intuito educacional">
-  <title>Site Pessoal do Gabriel</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Site Desenvolvido Pelo estudante Gabriel Augusto com intuito educacional">
+    <title>Site Pessoal do Gabriel</title>
+  </head>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Imagens/Gabriel.png" alt="Imagem de perfil de Gabriel" height="150 150"></td>
-      <td>
-        <h1>Gabriel Augusto de Lima Maia</h1>
-        <p><em>Estudante do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
-        <p>Sou um estudante do curso de engenharia de programação do Cefet-MG.<br> Participo como capitão na equipe <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, uma equipe voltada para a construção de nano satélites.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <table cellspacing="20" align="center">
-    <tr>
-      <td><a href="index.html">Página Inicial</a></td>
-      <td><a href="hobbiesPt-Br.html">Meus Hobbies</a></td>
-      <td><a href="contate-me.html">Contate-me</a></td>
-    </tr>
-  </table>
-  <table cellspacing="10" cellpadding="1" align="center">
-    <td>Language</td>
-    <td><a href="index.html">PT-BR</a></td>
-    <td><a href="indexEn.html">EN-US</a></td>
-  </table>
-  <hr>
-  <h3>Educação/Cursos</h3>
-  <table border="1 px" cellspacing="0" cellpadding="4">
-    <thead>
+  <body>
+    <table cellspacing="20">
       <tr>
-        <th>Tipo de Formação</th>
-        <th>Local</th>
-        <th>Data</th>
+        <td><img src="/Assets/Images/Gabriel.png" alt="Foto de perfil de Gabriel" height="150 150"></td>
+        <td>
+          <h1>Gabriel Augusto de Lima Maia</h1>
+          <p><em>Estudante do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
+          <p>Sou um estudante do curso de engenharia de programação do Cefet-MG.
+          <br> Seu ex capitão da equipe <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, uma equipe voltada para a construção de nano satélites.</p>
+        </td>
       </tr>
-    </thead>
-    <tbody>
+    </table>
+    <hr>
+    <table cellspacing="20" align="center">
       <tr>
-        <td><strong>Ensino Fundamental/Médio:</strong></td>
-        <td> Escola Sandoval Soares de Azevedo;</td>
-        <td>2005-2017</td>
+        <td><a href="index.html">Página Inicial</a></td>
+        <td><a href="./Public/Portifolio.html">Portfólio</a></td>
+        <td><a href="./Public/hobbiesPt-Br.html">Meus Hobbies</a></td>
+        <td><a href="./Public/contate-me.html">Contate-me</a></td>
+      </tr>
+    </table>
+    <table cellspacing="10" cellpadding="1" align="center">
+      <td>Language</td>
+      <td><a href="index.html">PT-BR</a></td>
+      <td><a href="indexEn.html">EN-US</a></td>
+    </table>
+    <hr>
+    <h3>Educação/Cursos</h3>
+    <table border="1 px" cellspacing="0" cellpadding="4">
+      <thead>
+        <tr>
+          <th>Tipo de Formação</th>
+          <th>Local</th>
+          <th>Data</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><strong>Ensino Fundamental/Médio:</strong></td>
+          <td> Escola Sandoval Soares de Azevedo;</td>
+          <td>2005-2017</td>
+        </tr>
+        <tr>
+          <td><strong>Ensino superior(Engenharia da Computação):</strong></td>
+          <td> Centro Federal de Educação Tecnológica de Minas Gerais(Cefet-MG)</td>
+          <td>2019- Em progresso</td>
+        </tr>
+        <tr>
+          <td> <strong>Curso de Inglês:</strong> </td>
+          <td>CNI Centro de Formação Profissional</td>
+          <td>2015-2016</td>
+        </tr>
+        <tr>
+          <td> <strong>Curso de Gestão Industrial <br /> Segurança do Trabalho <br /> Meio Ambiente <br /> Gestão Adinistrativa</strong> </td>
+          <td>Fundação Cefet Minas</td>
+          <td>2016</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <hr>
+
+    <h3>Habilidades</h3>
+
+    <table border="1 px" cellspacing="0" cellpadding="4">
+      <tr>
+        <td>HTML5</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td><strong>Ensino superior(Engenharia da Computação):</strong></td>
-        <td> Centro Federal de Educação Tecnológica de Minas Gerais(Cefet-MG)</td>
-        <td>2019- Em progresso</td>
+        <td>C</td>
+        <td>⭐⭐⭐</td>
       </tr>
       <tr>
-        <td> <strong>Curso de Inglês:</strong> </td>
-        <td>CNI Centro de Formação Profissional</td>
-        <td>2015-2016</td>
+        <td>Java</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td> <strong>Curso de Gestão Industrial <br /> Segurança do Trabalho <br /> Meio Ambiente <br /> Gestão Adinistrativa</strong> </td>
-        <td>Fundação Cefet Minas</td>
-        <td>2016</td>
+        <td>CSS </td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
-    </tbody>
-  </table>
-
-  <hr>
-
-  <h3>Habilidades</h3>
-
-  <table border="1 px" cellspacing="0" cellpadding="4">
-    <tr>
-      <td>HTML5</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>C</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Java</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS </td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Leitura</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-  </table>
+      <tr>
+        <td>Leitura</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Oracle SQL</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>VHDL</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Lua</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
 
 
-  <hr>
+    <hr>
 
 
-</body>
+  </body>
 
 </html>
