--- a/indexEn.html
+++ b/indexEn.html
@@ -10,11 +10,12 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Imagens/Gabriel.png" alt="Profile image of Gabriel" height="150 150"></td>
+      <td><img src="./Assets/Images/Gabriel.png" alt="Profile image of Gabriel" height="150 150"></td>
       <td>
         <h1>Gabriel Augusto de Lima Maia</h1>
         <p><em>Student of the computer engineering course at <strong>CEFET-MG</strong></em></p>
-        <p>I am a student of the computer engineering course at Cefet-MG.<br>I participate as captain in the team <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, a team focused on the construction of nano satellites.</p>
+        <p>I am a student of the computer engineering course at Cefet-MG.
+        <br>I'm also a former captain in <a href="https://www.instagram.com/cefastaerospace/">Cefast Aeroespace</a>, a studant team focused on the construction of nano satellites.</p>
       </td>
     </tr>
   </table>
@@ -22,8 +23,9 @@
   <table cellspacing="20" align="center">
     <tr>
       <td><a href="indexEn.html">Index</a></td>
-      <td><a href="hobbiesEn.html">My Hobbies</a></td>
-      <td><a href="contact-me.html">Contact Me</a></td>
+      <td><a href="./Public/PortifolioEn.html">Portfolio</a></td>
+      <td><a href="./Public/hobbiesEn.html">My Hobbies</a></td>
+      <td><a href="./Public/contact-me.html">Contact Me</a></td>
     </tr>
   </table>
   <table cellspacing="10" cellpadding="1" align="center">
@@ -72,11 +74,11 @@
   <table border="1 px" cellspacing="0" cellpadding="4">
     <tr>
       <td>HTML5</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>C</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Java</td>
@@ -84,11 +86,23 @@
     </tr>
     <tr>
       <td>CSS </td>
-      <td>⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Reading</td>
       <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Oracle SQL</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>VHDL</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Lua</td>
+      <td>⭐⭐⭐</td>
     </tr>
   </table>
 
