--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="/Assets/Images/Gabriel.png" alt="Foto de perfil de Gabriel" height="150 150"></td>
+        <td><img src="./Assets/Images/Gabriel.png" alt="Foto de perfil de Gabriel" height="150 150"></td>
         <td>
           <h1>Gabriel Augusto de Lima Maia</h1>
           <p><em>Estudante do curso de engenharia de computação do <strong>CEFET-MG</strong></em></p>
@@ -113,3 +113,4 @@
   </body>
 
 </html>
+
